# ReasonScript

./: .gitignore  CHANGELOG.md  Language_Surface_LS1_Type_Validation_Report.md  Language_Surface_Phase_1_1_AST_Mapping_Validation_Report.md  Language_Surface_Phase_1_2_Expression_Pattern_Validation_Report.md  Language_Surface_Phase_1_6_Calculation_Integration_Validation_Report.md  Makefile  Operational_Semantics_Validation_Report.md  README.md  Taskfile.yml  conftest.py  playground_comparison_expression_evaluation_matrix.json  playground_conditional_branch_evaluation_audit.md  playground_default_exhaustiveness_matrix.json  playground_enum_match_branch_evaluation_audit.md  playground_enum_symbol_resolution_audit.md  playground_enum_symbol_resolution_matrix.json  playground_function_control_flow_audit.md  playground_function_control_flow_matrix.json  playground_function_semantic_audit.md  playground_knowledge_branch_evidence_audit.md  playground_language_audit.md  playground_language_surface_v0_5_audit.md  playground_match_semantic_integration_audit.md  playground_nested_match_canonicalization_matrix.json  playground_optional_pattern_matching_audit.md  playground_optional_pattern_matching_matrix.json  playground_or_pattern_audit.md  playground_or_pattern_matrix.json  playground_pattern_guard_audit.md  playground_pattern_guard_matrix.json  playground_pattern_identity_normalization_audit.md  playground_pattern_identity_normalization_matrix.json  playground_range_pattern_audit.md  playground_range_pattern_matrix.json  playground_struct_exhaustiveness_matrix.json  playground_struct_pattern_matching_audit.md  (+5 more)
(+1225 files in other folders)
