[package]
name = "reasonscript-testplayground"
version = "0.1.0"
edition = "2021"
description = "ReasonScript TestPlayground v0.1 - Language specification validation environment"

[[bin]]
name = "testplayground"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
